# Kernel3

./: .gitignore  .hgignore  .travis.yml  README.md  bootstrap.php  composer.json  makePhar.php
examples/: .htaccess  deprecated1.php  init.php  test.vis  test10.php  test11.php  test12.php  test13.php  test14.php  test15.php  test2.php  test3.php  test4.php  test5.php  test6.php  test8.php
kernel3/: k3_bases-137e6ccf2248954b8dfc09b52c6fd4a9.krninc  k3_cache.php  k3_captcha.php  k3_dbase.php  k3_dbqc_mysql.php  k3_deprecated.php  k3_flexystore.php  k3_http.php  k3_lang.php  k3_mailer.php  k3_metafile.php  k3_misc.php  k3_mpc.php  k3_parser.php  k3_registry.php  k3_request.php  k3_session.php  k3_strings.php  k3_timer.php  k3_vis.php  k3_vis2.php  kernel3.php  krnl_def.lng  krnl_en.lng  krnl_ru.lng  mime.types  modules.qfc
kernel3/K3/: Application.php  Autoloader.php  Cache.php  Captcha.php  Chronometer.php  Config.php  Csv.php  DOM.php  Db.php  Environment.php  Image.php  Mime.php  Profiler.php  RSS.php  Registry.php  Request.php  Response.php  Session.php  Stream.php  String.php  Util.php  XhProf.php
kernel3/chars/: cp037.chr  cp1006.chr  cp1006.ltt  cp1026.chr  cp1026.ltt  cp424.chr  cp424.ltt  cp437.chr  (+112 more)
templater/: CMakeLists.txt  Makefile  test.vis  tpl.h  tpl.lex  tpl.y  tpl2js.cpp  tpl2js.y  tpl2php.cpp  tpl2php.y
tests/: FCacheTest.php  init.php  test.file  test.vis  test0.php  test1.file  test1.php  test10.php  test10.sql  test11.php  test12.php  test13.php  test15.php  test2.php  test3.php  test4.php  test4.tar  test5.php  test6.php  test8.php  test9.php
(+45 files in other folders)
